[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.49.0",
    "yt-dlp>=2026.6.9",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not network'"
markers = [
    "network: tests that hit live YouTube/Instagram (deselected by default; run with -m network)",
]

[tool.ruff]
target-version = "py313"
line-length = 100
